--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "vite": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
